# WearOSVideoDashboard

./: .gitignore  Dockerfile
backend/: Cargo.toml
backend/src/: main.rs  processor.rs
backend/static/: version.json
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
memory_bank/: backend_spec.md  frontend_spec.md  roadmap.md  system_overview.md  wearos_spec.md
watch_client/: build.gradle  local.properties  settings.gradle
watch_client/app/: build.gradle
watch_client/app/src/main/: AndroidManifest.xml
watch_client/app/src/main/java/com/wearos/videodashboard/: MainActivity.java
watch_client/app/src/main/res/layout/: activity_main.xml
