[package]
name = "wearos-video-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"
tempfile = "3.10"
futures = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
